Changes in database, code organization and new request/controller for category
