# src/doc/swagger_doc.json
@@ -3,12 +3,12 @@
   "info": {
     "version": "1.0.0",
     "title": "Ammo Varejo RestAPI",
-    "description": "Somos responsáveis pelas operações de varejo das marcas Santista, ARTEX, Persono, mmartan e casa moysés!"
+    "description": "Teste prático para o grupo Ammo Varejo."
   },
-  "host": "ammo-varejo-api.onrender.com",
+  "host": "localhost:3001",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/product/searchProduct": {
@@ -26,14 +26,14 @@
           },
           {
             "name": "page",
-            "description": "Página de itens.",
+            "description": "Página dos itens",
             "required": true,
             "type": "integer",
             "in": "query"
           },
           {
             "name": "itens",
-            "description": "Quantidade de itens a buscar.",
+            "description": "Quantidade de itens a buscar",
             "required": true,
             "type": "integer",
             "in": "query"
@@ -41,7 +41,6 @@
         ],
         "responses": {
           "200": {
-            "description": "Sucesso.",
             "schema": {
               "type": "object",
               "properties": {
@@ -51,8 +50,8 @@
                     "type": "object",
                     "properties": {
                       "idProduct": {
-                        "type": "number",
-                        "example": 0
+                        "type": "string",
+                        "example": "0"
                       },
                       "name": {
                         "type": "string",
@@ -70,13 +69,42 @@
                         "type": "string",
                         "example": "preco original"
                       },
-                      "images": {
+                      "idCategory": {
                         "type": "string",
-                        "example": "imagens"
+                        "example": "id da categoria"
+                      },
+                      "images": {
+                        "type": "array",
+                        "items": {
+                          "type": "object",
+                          "properties": {
+                            "idImage": {
+                              "type": "number",
+                              "example": 0
+                            },
+                            "idProduct": {
+                              "type": "number",
+                              "example": 0
+                            },
+                            "src": {
+                              "type": "string",
+                              "example": "caminho para a imagem"
+                            }
+                          }
+                        }
                       },
                       "category": {
-                        "type": "string",
-                        "example": "categoria"
+                        "type": "object",
+                        "properties": {
+                          "idCategory": {
+                            "type": "string",
+                            "example": "id categoria"
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "nome da categoria"
+                          }
+                        }
                       }
                     }
                   }
@@ -89,10 +117,10 @@
               "xml": {
                 "name": "main"
               }
-            }
+            },
+            "description": "Sucesso"
           },
           "500": {
-            "description": "Erro.",
             "schema": {
               "type": "object",
               "properties": {
@@ -108,7 +136,76 @@
               "xml": {
                 "name": "main"
               }
-            }
+            },
+            "description": "Erro"
+          }
+        }
+      }
+    },
+    "/category/searchByTerm": {
+      "get": {
+        "tags": [
+          "category"
+        ],
+        "description": "Pesquisar categorias",
+        "parameters": [
+          {
+            "name": "term",
+            "description": "Termo para buscar a categoria",
+            "type": "string",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "idCategory": {
+                        "type": "number",
+                        "example": 0
+                      },
+                      "name": {
+                        "type": "string",
+                        "example": "nome"
+                      }
+                    }
+                  }
+                },
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Sucesso"
+          },
+          "500": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "msg": {
+                  "type": "string",
+                  "example": "Mensagem de erro."
+                },
+                "status": {
+                  "type": "boolean",
+                  "example": false
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "Erro"
           }
         }
       }
